# pycrate

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  install.sh  pycrate.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  publish.yml
api/: __init__.py  config.py  database.py  dependencies.py  main.py  schemas.py
api/routes/: admin.py  containers.py  suggestions.py  system.py  websockets.py
cli/: __init__.py  main.py  output.py
cli/commands/: __init__.py  cluster.py  compose.py  containers.py  dashboard.py  images.py  machine.py  run.py
cluster/: __init__.py  agent.py  deploy.py  master.py  portforward.py  reconciler.py  scheduler.py  state.py
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/containers/: page.tsx
dashboard/src/app/create/: page.tsx
dashboard/src/app/system/: page.tsx
dashboard/src/components/: ContainerCard.tsx  LogViewer.tsx  MetricsChart.tsx  ResourceGauge.tsx  Sidebar.tsx  StatusBadge.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/lib/: api.ts
docs/: ARCHITECTURE.md  CLI.md  CLUSTER.md  DEPLOYMENT.md  INTERNALS.md  ROADMAP.md  SECURITY.md
engine/: __init__.py  cgroups.py  config.py  container.py  exceptions.py  images.py  metrics.py  namespaces.py  networking.py  overlay.py  rootfs.py  security.py  syscalls.py  volumes.py
infrastructure/: nginx.conf  pycrate.service  setup-ec2.sh
machine/: __init__.py  backend.py  config.py  image.py  qemu.py  ssh.py  wsl.py
orchestrator/: __init__.py  compose.py  health.py  manifest.py
scripts/: setup-wsl.sh
tests/: conftest.py  e2e_machine.py  test_cluster.py  test_machine.py
tests/api/: test_dependencies.py  test_schemas.py
tests/engine/: test_cgroups.py  test_config.py  test_container.py  test_exceptions.py  test_metrics.py
(+1 files in other folders)
