[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycrate"
version = "0.1.0"
description = "A container runtime built from scratch in Python using Linux kernel primitives."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Somshubhro Guha" },
]
keywords = ["container", "runtime", "linux", "namespaces", "cgroups"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Operating System Kernels :: Linux",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "motor>=3.7.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "websockets>=14.0",
    "psutil>=6.1.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/Somshubhro07/pycrate"
Repository = "https://github.com/Somshubhro07/pycrate"
Documentation = "https://github.com/Somshubhro07/pycrate/tree/main/docs"

[tool.setuptools.packages.find]
include = ["engine*", "api*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
